--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "devDependencies": {
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "parcel": "^2.6.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
   }
