--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "source": "demo/index.html",
   "scripts": {
     "start": "parcel",
+    "build-demo": "parcel build --dist-dir demo-build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
