--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "demo/index.html",
   "scripts": {
     "start": "parcel",
-    "build-demo": "parcel build --dist-dir docs",
+    "build-demo": "parcel build --dist-dir docs --public-url .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
