--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "react-simple-calendar",
   "version": "1.0.0",
   "description": "",
-  "source": "demo/index.html",
+  "source": "src/index.tsx",
+  "main": "build/main.js",
+  "module": "build/module.js",
+  "types": "build/types.d.ts",
   "scripts": {
-    "start": "parcel",
-    "build-demo": "parcel build --dist-dir docs --public-url .",
+    "start": "parcel demo/index.html",
+    "build": "parcel build",
+    "build-demo": "parcel build demo/index.html --dist-dir docs --public-url .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +22,13 @@
     "url": "https://github.com/ruthtempo/react-simple-calendar/issues"
   },
   "homepage": "https://github.com/ruthtempo/react-simple-calendar#readme",
+  "peerDependencies": {
+    "date-fns": ">=2.0.0",
+    "react": ">=17.0.0"
+  },
   "devDependencies": {
+    "@parcel/packager-ts": "^2.6.2",
+    "@parcel/transformer-typescript-types": "^2.6.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "bootstrap": "^5.1.3",
@@ -29,5 +39,8 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
-  }
+  },
+  "files": [
+    "build/*"
+  ]
 }
